--- a/cargo-vet/action.yml
+++ b/cargo-vet/action.yml
@@ -9,7 +9,7 @@ runs:
       uses: actions/cache@v3
       with:
         path: .cargo/bin/cargo-vet
-        key: ${{ runner.os }}-cargo-vet-${{ hashFiles('.cargo/bin/cargo-vet') }}
+        key: ${{ runner.os }}-cargo-vet-${{ hashFiles('/usr/local/cargo/bin/cargo-vet') }}
     - name: cargo vet install
       shell: bash
       run: |
